--- a/html/main.html
+++ b/html/main.html
@@ -6,12 +6,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/main.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+  <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
   <title>Document</title>
 </head>
 <body>
   <header>
     <div class="first_header">
-      <div class="hamburger"></div>
+      <div class="hamburger_box">
+        <div class="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+
+        <nav class="globalMenuSp">
+            <ul>
+                <li><a href="#">Menu1</a></li>
+                <li><a href="#">Menu2</a></li>
+                <li><a href="#">Menu3</a></li>
+                <li><a href="#">Menu4</a></li>
+                <li><a href="#">Menu5</a></li>
+            </ul>
+        </nav>
+      </div>
       <div class="logo">
         <img src="../img/main-logo-black.svg" alt="">
       </div>
@@ -21,14 +38,14 @@
     </div>
     <div class="second_header">
       <ul>
-        <li>新作アイテム</li>
-        <li>再入荷アイテム</li>
+        <li>新作<span class="hidden">アイテム</span></li>
+        <li>再入荷<span class="hidden">アイテム</span></li>
         <li>カテゴリ</li>
         <li>ランキング</li>
-        <li class="guide">お買い物ガイド</li>
+        <li class="hidden">お買い物ガイド</li>
       </ul>
     </div>
+    <script src="../js/hamburger.js"></script>
   </header>
-  
 </body>
 </html>
