feat: ヘッダーレイアウトの細かな修正を行った
Message body
以下を行う予定
・body部分の作成

Message footer

--- a/html/main.html
+++ b/html/main.html
@@ -9,43 +9,44 @@
   <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
   <title>Document</title>
 </head>
-<body>
-  <header>
-    <div class="first_header">
-      <div class="hamburger_box">
-        <div class="hamburger">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
 
-        <nav class="globalMenuSp">
-            <ul>
-                <li><a href="#">Menu1</a></li>
-                <li><a href="#">Menu2</a></li>
-                <li><a href="#">Menu3</a></li>
-                <li><a href="#">Menu4</a></li>
-                <li><a href="#">Menu5</a></li>
-            </ul>
-        </nav>
+<header>
+  <div class="first_header">
+    <div class="hamburger_box">
+      <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
       </div>
-      <div class="logo">
-        <img src="../img/main-logo-black.svg" alt="">
-      </div>
-      <div class="cart">
-        <a href=""><i class="bi bi-cart"></i></a>
-      </div>
+      <nav class="globalMenuSp">
+          <ul>
+              <li><a href="#">Menu1</a></li>
+              <li><a href="#">Menu2</a></li>
+              <li><a href="#">Menu3</a></li>
+              <li><a href="#">Menu4</a></li>
+              <li><a href="#">Menu5</a></li>
+          </ul>
+      </nav>
     </div>
-    <div class="second_header">
-      <ul>
-        <li>新作<span class="hidden">アイテム</span></li>
-        <li>再入荷<span class="hidden">アイテム</span></li>
-        <li>カテゴリ</li>
-        <li>ランキング</li>
-        <li class="hidden">お買い物ガイド</li>
-      </ul>
+    <div class="logo">
+      <img src="../img/main-logo-black.svg" alt="">
     </div>
-    <script src="../js/hamburger.js"></script>
-  </header>
+    <div class="cart">
+      <a href=""><i class="bi bi-cart3"></i></a>
+    </div>
+  </div>
+  <div class="second_header">
+    <ul>
+      <li>新作<span class="hidden">アイテム</span></li>
+      <li>再入荷<span class="hidden">アイテム</span></li>
+      <li>カテゴリ</li>
+      <li>ランキング</li>
+      <li class="hidden">お買い物ガイド</li>
+    </ul>
+  </div>
+  <script src="../js/hamburger.js"></script>
+</header>
+
+<body>
 </body>
 </html>
