feat: CSSの記述を見直した
Message body
JSの読み込みができていないのを修正する

Message footer

--- a/html/main.html
+++ b/html/main.html
@@ -30,7 +30,7 @@
       </nav>
     </div>
     <div class="logo">
-      <img src="../img/main-logo-black.svg" alt="">
+      <a href="main.html"><img src="../img/main-logo-black.svg" alt=""></a>
     </div>
     <div class="cart">
       <a href=""><i class="bi bi-cart3"></i></a>
@@ -49,7 +49,7 @@
       <li class="hidden">お買い物ガイド</li>
     </ul>
   </div>
-  <main class="main-content">
+  <main>
     <section class="slideshow">
       <div class="slideshow-inner">
         <div class="slides">
