--- a/html/main.html
+++ b/html/main.html
@@ -166,4 +166,11 @@
     </div>
   </main>
 </body>
+
+<footer>
+  <span class="copyright">
+    Copyright &copy; 2022 e-zakkamania stores. All Rights Reserved.
+  </span>
+</footer>
+
 </html>
