feat: 全体的なレイアウトの調整を行った
Message body
JSの読み込みができていないのを修正する

Message footer

--- a/html/main.html
+++ b/html/main.html
@@ -169,7 +169,7 @@
 
 <footer>
   <span class="copyright">
-    Copyright &copy; 2022 e-zakkamania stores. All Rights Reserved.
+    <i class="bi bi-c-circle"></i> 2022 e-zakkamania stores.
   </span>
 </footer>
 
