feat: 検索バーを追加した
Message body
メインのコンテンツ作成に着手していく

Message footer

--- a/html/main.html
+++ b/html/main.html
@@ -32,22 +32,13 @@
       <a href="main.html"><img src="../img/main-logo-black.svg" alt=""></a>
     </div>
     <div class="cart">
-      <a href=""><i class="bi bi-cart3"></i></a>
+      <a href=""><i class="bi bi-person-circle"></i></a>
     </div>
   </div>
   <script src="../js/hamburger.js"></script>
 </header>
 
 <body>
-  <!-- <div class="second_header">
-    <ul>
-      <li>新作<span class="hidden">アイテム</span></li>
-      <li>再入荷<span class="hidden">アイテム</span></li>
-      <li>カテゴリ</li>
-      <li>ランキング</li>
-      <li class="hidden">お買い物ガイド</li>
-    </ul>
-  </div> -->
   <main>
     <section class="slideShow">
       <div class="wrapper">
@@ -77,6 +68,25 @@
       </div>
       <script src="../js/slides.js"></script>
     </section>
+
+    <section class="search">
+      <div class="search_header">
+        <ul>
+          <li>新作<span class="hidden">アイテム</span></li>
+          <li>再入荷<span class="hidden">アイテム</span></li>
+          <li>カテゴリ</li>
+          <li>ランキング</li>
+          <li class="hidden">お買い物ガイド</li>
+        </ul>
+      </div>
+      <div class="search_bar">
+        <form id="form1" action="自分のサイトURL">
+          <input id="search_bar" class="search_bar" name="search_bar" type="text" placeholder="キーワードを入力" />
+          <input id="search_btn" class="search_btn" type="submit" value="検索" />
+        </form>
+      </div>
+    </section>
+
     <section class="information">
       <div class="infoItem">
         <span class="date">2022.11.4</span><br>
@@ -87,6 +97,7 @@
         <span class="text">原材料高騰による一部商品価格高騰一部商品価格改定のお知らせ</span>
       </div>
     </section>
+
   </main>
 </body>
 
