--- a/html/main.html
+++ b/html/main.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/051eb814e7.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="../css/main.css">
   <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
@@ -80,9 +81,8 @@
         </ul>
       </div>
       <div class="search_bar">
-        <form id="form1" action="自分のサイトURL">
-          <input id="search_bar" class="search_bar" name="search_bar" type="text" placeholder="キーワードを入力" />
-          <input id="search_btn" class="search_btn" type="submit" value="検索" />
+        <form method="get" action="#" class="search_container">
+          <input type="text" size="25" placeholder="キーワードを入力"><input type="submit" value="&#xf002">
         </form>
       </div>
     </section>
