feat: 細かなレイアウトの調整を行った
Message body
メインのコンテンツ作成に着手していく

Message footer

--- a/html/main.html
+++ b/html/main.html
@@ -82,7 +82,8 @@
       </div>
       <div class="search_bar">
         <form method="get" action="#" class="search_container">
-          <input type="text" size="25" placeholder="キーワードを入力"><input type="submit" value="&#xf002">
+          <input type="text" size="25" placeholder="キーワードを入力">
+          <button type="submit"><i class="bi bi-search"></i></button>
         </form>
       </div>
     </section>
