feat: 細かなレイアウトの調整を行った
Message body
メインのコンテンツ作成に着手していく

Message footer

--- a/html/main.html
+++ b/html/main.html
@@ -95,7 +95,7 @@
       </div>
       <div class="infoItem">
         <span class="date">2022.9.26</span><br>
-        <span class="text">原材料高騰による一部商品価格高騰一部商品価格改定のお知らせ</span>
+        <span class="text">原材料高騰による一部商品価格改定のお知らせ</span>
       </div>
     </section>
 
