--- a/html/main.html
+++ b/html/main.html
@@ -33,7 +33,7 @@
       <a href="main.html"><img src="../img/main-logo-black.svg" alt=""></a>
     </div>
     <div class="cart">
-      <a href=""><i class="bi bi-person-circle"></i></a>
+      <a href="./myPage.html"><i class="bi bi-person-circle"></i></a>
     </div>
   </div>
   <script src="../js/hamburger.js"></script>
