feat: マイページを追加した
Message body
メインのコンテンツ作成に着手していく

Message footer

--- a/html/myPage.html
+++ b/html/myPage.html
@@ -7,6 +7,7 @@
   <script src="https://kit.fontawesome.com/051eb814e7.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/myPage.css">
   <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
   <title>Document</title>
 </head>
@@ -39,4 +40,38 @@
   <script src="../js/hamburger.js"></script>
 </header>
 
+<body>
+  <div class="myPage_mainItem">
+    <div class="subItem">
+      <a href="">
+        <p><i class="bi bi-box-arrow-in-right"></i></p>
+        <p>ログイン</p>
+      </a>
+    </div>
+    <div class="subItem">
+      <a href="">
+        <p><i class="bi bi-person-check-fill"></i></p>
+        <p>新規会員登録</p>
+      </a>
+    </div>
+    <div class="subItem">
+      <a href="">
+        <p><i class="bi bi-heart-fill"></i></p>
+        <p>お気に入り</p>
+      </a>
+    </div>
+    <div class="subItem">
+      <a href="">
+        <p><i class="bi bi-info-circle"></i></p>
+        <p>お買い物ガイド</p>
+      </a>
+    </div>
+  </div>
+</body>
+
+<footer>
+  <span class="copyright">
+    <i class="bi bi-c-circle"></i> 2022 e-zakkamania stores.
+  </span>
+</footer>
 </html>
