feat: マイページのレイアウトを変更した
Message body
以下を着手していく
・メインのコンテンツ作成に着手していく
・マイページのコンテンツを追加する

Message footer

--- a/html/myPage.html
+++ b/html/myPage.html
@@ -42,25 +42,35 @@
 
 <body>
   <div class="myPage_mainItem">
-    <div class="subItem">
-      <a href="">
-        <p><i class="bi bi-box-arrow-in-right"></i></p>
-        <p>ログイン</p>
-      </a>
+    <div class="member">
+      <div class="subItem login">
+        <a href="">
+          <p><i class="bi bi-box-arrow-in-right"></i></p>
+          <p>ログイン</p>
+        </a>
+      </div>
+      <div class="subItem signup">
+        <a href="">
+          <p><i class="bi bi-person-check-fill"></i></p>
+          <p>新規会員登録</p>
+        </a>
+      </div>
     </div>
-    <div class="subItem">
-      <a href="">
-        <p><i class="bi bi-person-check-fill"></i></p>
-        <p>新規会員登録</p>
-      </a>
+    <div class="shopping">
+      <div class="subItem cart">
+        <a href="">
+          <p><i class="bi bi-cart3"></i></p>
+          <p>カート</p>
+        </a>
+      </div>
+      <div class="subItem like">
+        <a href="">
+          <p><i class="bi bi-heart-fill"></i></p>
+          <p>お気に入り</p>
+        </a>
+      </div>
     </div>
-    <div class="subItem">
-      <a href="">
-        <p><i class="bi bi-heart-fill"></i></p>
-        <p>お気に入り</p>
-      </a>
-    </div>
-    <div class="subItem">
+    <div class="subItem guide">
       <a href="">
         <p><i class="bi bi-info-circle"></i></p>
         <p>お買い物ガイド</p>
