feat: SNSアイコンを追加した
Message body
以下を着手していく
・メインのコンテンツ作成に着手していく
・マイページのコンテンツを追加する

Message footer

--- a/html/myPage.html
+++ b/html/myPage.html
@@ -77,6 +77,13 @@
       </a>
     </div>
   </div>
+  <div class="sns">
+    <div class="snsItem"><a href=""><i class="bi bi-instagram"></i></a></div>
+    <div class="snsItem"><a href=""><i class="bi bi-twitter"></i></a></div>
+    <div class="snsItem"><a href=""><i class="bi bi-line"></i></a></div>
+    <div class="snsItem"><a href=""><i class="bi bi-facebook"></i></a></div>
+    <div class="snsItem"><a href=""><img src="../img/mzl.ysuexlza.webp" alt=""></a></div>
+  </div>
 </body>
 
 <footer>
