feat: スタイリングコンテンツの下地を追加した
Message body
以下を着手していく
・メインのコンテンツを追加する

Message footer

--- a/html/main.html
+++ b/html/main.html
@@ -99,13 +99,38 @@
       </div>
     </section>
 
+    <section class="styling">
+      <div class="scene">
+        <div id="plant" class="item"></div>
+        <div id="mirror">
+          <div id="mirror-content"></div>
+        </div>
+        <div id="plant-2" class="item"></div>
+        <div id="books" class="item">
+          <div id="apple" class="item"></div>
+        </div>
+        <div id="plant-3" class="item"></div>
+        <div id="clock" class="item"></div>
+      </div>
+      <script src="../js/styling.js"></script>
+    </section>
   </main>
 </body>
 
+
 <footer>
-  <span class="copyright">
+  <p class="corpInfo">
+    <a href="">会社概要</a> | 
+    <a href="">衣装貸し出し</a> |
+    <a href="">一緒に働く？</a>
+  </p><br>
+  <p class="corpInfo">
+    <a href="">プライバシーポリシー</a> | 
+    <a href="">特定商取引に基づく表記</a>
+  </p><br>
+  <p class="copyright">
     <i class="bi bi-c-circle"></i> 2022 e-zakkamania stores.
-  </span>
+  </p>
 </footer>
 
 </html>
