--- a/html/myPage.html
+++ b/html/myPage.html
@@ -75,6 +75,10 @@
         <p><i class="bi bi-info-circle"></i></p>
         <p>お買い物ガイド</p>
       </a>
+      <a href="">
+        <p><i class="bi bi-question-circle"></i></p>
+        <p>よくあるご質問</p>
+      </a>
     </div>
   </div>
   <div class="sns">
@@ -87,8 +91,17 @@
 </body>
 
 <footer>
-  <span class="copyright">
+  <p class="corpInfo">
+    <a href="">会社概要</a> | 
+    <a href="">衣装貸し出し</a> |
+    <a href="">一緒に働く？</a>
+  </p><br>
+  <p class="corpInfo">
+    <a href="">プライバシーポリシー</a> | 
+    <a href="">特定商取引に基づく表記</a>
+  </p><br>
+  <p class="copyright">
     <i class="bi bi-c-circle"></i> 2022 e-zakkamania stores.
-  </span>
+  </p>
 </footer>
 </html>
