feat: スタイリングコンテンツを完成させた
Message body
以下を着手していく
・メインのコンテンツを追加する

Message footer

--- a/html/main.html
+++ b/html/main.html
@@ -88,7 +88,7 @@
       </div>
     </section>
 
-    <section class="information">
+    <!-- <section class="information">
       <div class="infoItem">
         <span class="date">2022.11.4</span><br>
         <span class="text">発送についてのご案内</span>
@@ -97,7 +97,7 @@
         <span class="date">2022.9.26</span><br>
         <span class="text">原材料高騰による一部商品価格改定のお知らせ</span>
       </div>
-    </section>
+    </section> -->
 
     <section class="styling">
       <div class="scene">
@@ -113,6 +113,13 @@
         <div id="clock" class="item"></div>
       </div>
       <script src="../js/styling.js"></script>
+    </section>
+
+    <section>
+      <div class="contents">
+        <div class="contentsItem">aaa</div>
+        <div class="contentsItem">aaa</div>
+      </div>
     </section>
   </main>
 </body>
