--- a/html/myPage.html
+++ b/html/myPage.html
@@ -70,15 +70,33 @@
         </a>
       </div>
     </div>
-    <div class="subItem guide">
-      <a href="">
-        <p><i class="bi bi-info-circle"></i></p>
-        <p>お買い物ガイド</p>
-      </a>
-      <a href="">
-        <p><i class="bi bi-question-circle"></i></p>
-        <p>よくあるご質問</p>
-      </a>
+  </div>
+  <div class="contents">
+    <div class="contentsTitle">
+      <p>コンテンツ</p>
+      <p>contents</p>
+      <p></p>
+    </div>
+    <div class="contentsItem">
+      <div><a href=""><img src="https://e-zakkamania.com/theme/images/contents/nyakka-1040x1040.jpg" alt=""></a></div>
+      <div><a href=""><img src="https://e-zakkamania.com/theme/images/contents/stylingLab-1040x1040.jpg" alt=""></a></div>
+      <div><a href=""><img src="https://e-zakkamania.com/theme/images/contents/fukumania-1040x1040.jpg" alt=""></a></div>
+    </div>
+  </div>
+  <div class="myPage_mainItem">
+    <div class="member">
+      <div class="subItem login">
+        <div class="subItem guide">
+          <a href="">
+            <p><i class="bi bi-info-circle"></i></p>
+            <p>お買い物ガイド</p>
+          </a>
+          <a href="">
+            <p><i class="bi bi-question-circle"></i></p>
+            <p>よくあるご質問</p>
+          </a>
+        </div>
+      </div>
     </div>
   </div>
   <div class="sns">
