--- a/html/myPage.html
+++ b/html/myPage.html
@@ -99,6 +99,9 @@
       </div>
     </div>
   </div>
+  <div class="app">
+    <img src="https://e-zakkamania.com/contents/app/img/app_icon.png" alt="">
+  </div>
   <div class="sns">
     <div class="snsItem"><a href=""><i class="bi bi-instagram"></i></a></div>
     <div class="snsItem"><a href=""><i class="bi bi-twitter"></i></a></div>
