fix: 細かなレイアウトの調整を行った
Message body
・アプリリンクを設置した
・メインのコンテンツを追加する

Message footer

--- a/html/main.html
+++ b/html/main.html
@@ -114,10 +114,19 @@
       </div>
       <script src="../js/styling.js"></script>
     </section>
+    <div class="styleMore">
+      <p>\ スタイリングをもっと見る /</p>
+    </div>
 
     <section>
       <div class="contents">
-        <div class="contentsItem">aaa</div>
+        <div class="contentsItem ranking">
+          <div class="title">
+            <p>人気ランキング</p>
+            <p>RANKING</p>
+            <p class="border"></p>
+          </div>
+        </div>
         <div class="contentsItem">aaa</div>
       </div>
     </section>
