--- a/html/myPage.html
+++ b/html/myPage.html
@@ -100,7 +100,7 @@
     </div>
   </div>
   <div class="app">
-    <img src="https://e-zakkamania.com/contents/app/img/app_icon.png" alt="">
+    <a href=""><img src="https://e-zakkamania.com/contents/app/img/app_icon.png" alt=""></a>
   </div>
   <div class="sns">
     <div class="snsItem"><a href=""><i class="bi bi-instagram"></i></a></div>
