fix: 細かなレイアウトの調整を行った
Message body
・アプリリンクを設置した
・メインのコンテンツを追加する

Message footer

--- a/html/main.html
+++ b/html/main.html
@@ -115,7 +115,7 @@
       <script src="../js/styling.js"></script>
     </section>
     <div class="styleMore">
-      <p>\ スタイリングをもっと見る /</p>
+      <p>\ コーディネートをもっと見る /</p>
     </div>
 
     <section>
@@ -123,11 +123,17 @@
         <div class="contentsItem ranking">
           <div class="title">
             <p>人気ランキング</p>
-            <p>RANKING</p>
+            <p>ranking</p>
             <p class="border"></p>
           </div>
         </div>
-        <div class="contentsItem">aaa</div>
+        <div class="contentsItem newItem">
+          <div class="title">
+            <p>新作アイテム</p>
+            <p>new arrival</p>
+            <p class="border"></p>
+          </div>
+        </div>
       </div>
     </section>
   </main>
