--- a/html/myPage.html
+++ b/html/myPage.html
@@ -72,7 +72,7 @@
     </div>
   </div>
   <div class="contents">
-    <div class="contentsTitle">
+    <div class="title">
       <p>コンテンツ</p>
       <p>contents</p>
       <p></p>
