feat: マイページのレイアウトを変更した
Message body
メニューコンテンツを作成していく

Message footer

--- a/html/myPage.html
+++ b/html/myPage.html
@@ -69,18 +69,30 @@
           <p>お気に入り</p>
         </a>
       </div>
+      <div class="subItem books">
+        <a href="">
+          <p><i class="bi bi-book"></i></p>
+          <p>コンテンツ</p>
+        </a>
+      </div>
     </div>
   </div>
   <div class="contents">
     <div class="title">
-      <p>コンテンツ</p>
-      <p>contents</p>
+      <p>イベント</p>
+      <p>events</p>
       <p></p>
     </div>
     <div class="contentsItem">
-      <div><a href=""><img src="https://e-zakkamania.com/theme/images/contents/nyakka-1040x1040.jpg" alt=""></a></div>
-      <div><a href=""><img src="https://e-zakkamania.com/theme/images/contents/stylingLab-1040x1040.jpg" alt=""></a></div>
-      <div><a href=""><img src="https://e-zakkamania.com/theme/images/contents/fukumania-1040x1040.jpg" alt=""></a></div>
+      <div class="">
+        <div><a href=""><img src="https://e-zakkamania.com/theme/images/contents/nyakka-1040x1040.jpg" alt=""></a></div>
+        <div><a href=""><img src="https://e-zakkamania.com/theme/images/contents/stylingLab-1040x1040.jpg" alt=""></a></div>
+        <div><a href=""><img src="https://e-zakkamania.com/theme/images/contents/fukumania-1040x1040.jpg" alt=""></a></div>
+      </div>
+      <div class="">
+        <div><a href=""><img src="https://e-zakkamania.com/theme/images/contents/stylingLab-1040x1040.jpg" alt=""></a></div>
+        <div><a href=""><img src="https://e-zakkamania.com/theme/images/contents/fukumania-1040x1040.jpg" alt=""></a></div>
+      </div>
     </div>
   </div>
   <div class="myPage_mainItem">
