fix: 細かなレイアウトの調整を行った
Message body
・コンテンツページの作成を行う予定
・ハンバーガーメニューにコンテンツを追加する

Message footer

--- a/html/main.html
+++ b/html/main.html
@@ -99,6 +99,9 @@
       </div>
     </section> -->
 
+    <p class="stylingMore">
+      <a href="">\ コーディネートをもっと見る /</a>
+    </p>
     <section class="styling">
       <div class="scene">
         <div id="plant" class="item"></div>
@@ -114,9 +117,6 @@
       </div>
       <script src="../js/styling.js"></script>
     </section>
-    <div class="styleMore">
-      <p>\ コーディネートをもっと見る /</p>
-    </div>
 
     <section>
       <div class="contents">
@@ -138,7 +138,6 @@
     </section>
   </main>
 </body>
-
 
 <footer>
   <p class="corpInfo">
