--- a/html/myPage.html
+++ b/html/myPage.html
@@ -70,26 +70,26 @@
         </a>
       </div>
       <div class="subItem books">
-        <a href="">
-          <p><i class="bi bi-book"></i></p>
+        <a href="./contents.html">
+          <p><i class="bi bi-book-fill"></i></p>
           <p>コンテンツ</p>
         </a>
       </div>
     </div>
   </div>
-  <div class="contents">
+  <div class="contents events">
     <div class="title">
       <p>イベント</p>
       <p>events</p>
       <p></p>
     </div>
     <div class="contentsItem">
-      <div class="">
+      <div class="eventItems">
         <div><a href=""><img src="https://e-zakkamania.com/theme/images/contents/nyakka-1040x1040.jpg" alt=""></a></div>
         <div><a href=""><img src="https://e-zakkamania.com/theme/images/contents/stylingLab-1040x1040.jpg" alt=""></a></div>
         <div><a href=""><img src="https://e-zakkamania.com/theme/images/contents/fukumania-1040x1040.jpg" alt=""></a></div>
       </div>
-      <div class="">
+      <div class="eventItems">
         <div><a href=""><img src="https://e-zakkamania.com/theme/images/contents/stylingLab-1040x1040.jpg" alt=""></a></div>
         <div><a href=""><img src="https://e-zakkamania.com/theme/images/contents/fukumania-1040x1040.jpg" alt=""></a></div>
       </div>
