fix: ハンバーガーメニューのレイアウト調整を行った
Message body
・コンテンツページの作成を行う予定
・ハンバーガーメニューにコンテンツを追加する

Message footer

--- a/html/main.html
+++ b/html/main.html
@@ -20,13 +20,33 @@
         <span></span>
       </div>
       <nav class="globalMenuSp">
-          <ul>
-              <li><a href="#">Menu1</a></li>
-              <li><a href="#">Menu2</a></li>
-              <li><a href="#">Menu3</a></li>
-              <li><a href="#">Menu4</a></li>
-              <li><a href="#">Menu5</a></li>
-          </ul>
+        <ul>
+          <div class="app">
+            <a href=""><img src="https://e-zakkamania.com/contents/app/img/app_icon.png" width="80" height="80" alt=""></a>
+          </div>
+          <li>
+            <p>カテゴリから探す</p>
+            <a href="#">Menu1</a>
+          </li>
+          <li>
+            <p>ブランドから探す</p>
+            <a href="#">Menu2</a>
+          </li>
+        </ul>
+        <footer>
+          <p class="corpInfo">
+            <a href="">会社概要</a> | 
+            <a href="">衣装貸し出し</a> |
+            <a href="">一緒に働く？</a>
+          </p><br>
+          <p class="corpInfo">
+            <a href="">プライバシーポリシー</a> | 
+            <a href="">特定商取引に基づく表記</a>
+          </p><br>
+          <p class="copyright">
+            <i class="bi bi-c-circle"></i> 2022 e-zakkamania stores.
+          </p>
+        </footer>
       </nav>
     </div>
     <div class="logo">
