fix: ハンバーガーメニューのレイアウト調整を行った
Message body
・コンテンツページの作成を行う予定
・ハンバーガーメニューにコンテンツを追加する

Message footer

--- a/html/myPage.html
+++ b/html/myPage.html
@@ -33,6 +33,46 @@
             <p>ブランドから探す</p>
             <a href="#">Menu2</a>
           </li>
+          <li>
+            <p>ブランドから探す</p>
+            <a href="#">Menu2</a>
+          </li>
+          <li>
+            <p>ブランドから探す</p>
+            <a href="#">Menu2</a>
+          </li>
+          <li>
+            <p>ブランドから探す</p>
+            <a href="#">Menu2</a>
+          </li>
+          <li>
+            <p>ブランドから探す</p>
+            <a href="#">Menu2</a>
+          </li>
+          <li>
+            <p>ブランドから探す</p>
+            <a href="#">Menu2</a>
+          </li>
+          <li>
+            <p>ブランドから探す</p>
+            <a href="#">Menu2</a>
+          </li>
+          <li>
+            <p>ブランドから探す</p>
+            <a href="#">Menu2</a>
+          </li>
+          <li>
+            <p>ブランドから探す</p>
+            <a href="#">Menu2</a>
+          </li>
+          <li>
+            <p>ブランドから探す</p>
+            <a href="#">Menu2</a>
+          </li>
+          <li>
+            <p>ブランドから探す</p>
+            <a href="#">Menu2</a>
+          </li>
         </ul>
         <footer>
           <p class="corpInfo">
