fix: ハンバーガーメニューのレイアウト調整を行った
Message body
・マイページのレイアウトを変更する予定

Message footer

--- a/html/myPage.html
+++ b/html/myPage.html
@@ -25,54 +25,21 @@
           <div class="app">
             <a href=""><img src="https://e-zakkamania.com/contents/app/img/app_icon.png" width="80" height="80" alt=""></a>
           </div>
-          <li>
-            <p>カテゴリから探す</p>
-            <a href="#">Menu1</a>
-          </li>
-          <li>
-            <p>ブランドから探す</p>
-            <a href="#">Menu2</a>
-          </li>
-          <li>
-            <p>ブランドから探す</p>
-            <a href="#">Menu2</a>
-          </li>
-          <li>
-            <p>ブランドから探す</p>
-            <a href="#">Menu2</a>
-          </li>
-          <li>
-            <p>ブランドから探す</p>
-            <a href="#">Menu2</a>
-          </li>
-          <li>
-            <p>ブランドから探す</p>
-            <a href="#">Menu2</a>
-          </li>
-          <li>
-            <p>ブランドから探す</p>
-            <a href="#">Menu2</a>
-          </li>
-          <li>
-            <p>ブランドから探す</p>
-            <a href="#">Menu2</a>
-          </li>
-          <li>
-            <p>ブランドから探す</p>
-            <a href="#">Menu2</a>
-          </li>
-          <li>
-            <p>ブランドから探す</p>
-            <a href="#">Menu2</a>
-          </li>
-          <li>
-            <p>ブランドから探す</p>
-            <a href="#">Menu2</a>
-          </li>
-          <li>
-            <p>ブランドから探す</p>
-            <a href="#">Menu2</a>
-          </li>
+          <div class="listItem">
+            <li>
+              <p>カテゴリから探す</p>
+              <a href="#">トップス</a>
+              <a href="#">ボトムス</a>
+              <a href="#">アウター</a>
+              <a href="#">ワンピース</a>
+              <a href="#">オールインワン</a>
+            </li>
+            <li>
+              <p>ブランドから探す</p>
+              <a href="#">オリジナルブランド</a>
+              <a href="#">セレクトブランド</a>
+            </li>
+          </div>
         </ul>
         <footer>
           <p class="corpInfo">
