fix: マイページのレイアウト調整を行った
Message body
・コンテンツページの作成を行う予定

Message footer

--- a/html/main.html
+++ b/html/main.html
@@ -112,6 +112,9 @@
           <input type="text" size="25" placeholder="キーワードを入力">
           <button type="submit"><i class="bi bi-search"></i></button>
         </form>
+        <div class="letszootie">
+          \ Let's zootie !!! /
+        </div>
       </div>
     </section>
 
