--- a/html/myPage.html
+++ b/html/myPage.html
@@ -106,20 +106,16 @@
   </div>
   <div class="contents events">
     <div class="title">
-      <p>イベント</p>
+      <p>お得なイベント</p>
       <p>events</p>
       <p></p>
     </div>
-    <div class="contentsItem">
-      <div class="eventItems">
-        <div><a href=""><img src="https://e-zakkamania.com/theme/images/contents/nyakka-1040x1040.jpg" alt=""></a></div>
-        <div><a href=""><img src="https://e-zakkamania.com/theme/images/contents/stylingLab-1040x1040.jpg" alt=""></a></div>
-        <div><a href=""><img src="https://e-zakkamania.com/theme/images/contents/fukumania-1040x1040.jpg" alt=""></a></div>
-      </div>
-      <div class="eventItems">
-        <div><a href=""><img src="https://e-zakkamania.com/theme/images/contents/stylingLab-1040x1040.jpg" alt=""></a></div>
-        <div><a href=""><img src="https://e-zakkamania.com/theme/images/contents/fukumania-1040x1040.jpg" alt=""></a></div>
-      </div>
+    <div class="eventItems">
+      <div><a href=""><img src="https://e-zakkamania.com/theme/images/event/22/1040_c221111_1.jpg?_ex=450x450" alt=""></a></div>
+      <div><a href=""><img src="https://e-zakkamania.com/theme/images/event/22/1040_221111.jpg?_ex=450x450" alt=""></a></div>
+      <div><a href=""><img src="https://image.rakuten.co.jp/e-zakkamania/cabinet/bn1040/1040_bottom_shipfree.jpg?_ex=450x450" alt=""></a></div>
+      <div><a href=""><img src="https://e-zakkamania.com/theme/images/contents/stylingLab-1040x1040.jpg" alt=""></a></div>
+      <div><a href=""><img src="https://e-zakkamania.com/theme/images/contents/fukumania-1040x1040.jpg" alt=""></a></div>
     </div>
   </div>
   <div class="myPage_mainItem">
