fix: 細かなレイアウトの調整を行った
Message body
・全体的にコンテンツを追加する

Message footer

--- a/html/contents.html
+++ b/html/contents.html
@@ -25,6 +25,12 @@
           <div class="app">
             <a href=""><img src="https://e-zakkamania.com/contents/app/img/app_icon.png" width="80" height="80" alt=""></a>
           </div>
+          <div class="search_bar">
+            <form method="get" action="#" class="search_container">
+              <input type="text" size="25" placeholder="キーワードを入力">
+              <button type="submit"><i class="bi bi-search"></i></button>
+            </form>
+          </div>
           <div class="listItem">
             <li>
               <p>カテゴリから探す</p>
