--- a/html/myPage.html
+++ b/html/myPage.html
@@ -25,6 +25,12 @@
           <div class="app">
             <a href=""><img src="https://e-zakkamania.com/contents/app/img/app_icon.png" width="80" height="80" alt=""></a>
           </div>
+          <div class="search_bar">
+            <form method="get" action="#" class="search_container">
+              <input type="text" size="25" placeholder="キーワードを入力">
+              <button type="submit"><i class="bi bi-search"></i></button>
+            </form>
+          </div>
           <div class="listItem">
             <li>
               <p>カテゴリから探す</p>
@@ -61,7 +67,7 @@
       <a href="main.html"><img src="../img/main-logo-black.svg" alt=""></a>
     </div>
     <div class="cart">
-      <a href=""><i class="bi bi-person-circle"></i></a>
+      <a href="./myPage.html"><i class="bi bi-person-circle"></i></a>
     </div>
   </div>
   <script src="../js/hamburger.js"></script>
