fix: 細かなレイアウトの調整を行った
Message body
・全体的にコンテンツを追加する

Message footer

--- a/html/main.html
+++ b/html/main.html
@@ -186,6 +186,47 @@
             <p>new arrival</p>
             <p class="border"></p>
           </div>
+          <div class="newItem_container">
+            <div class="newItems">
+              <div class="itemSet">
+                <img src="https://thumbnail.image.rakuten.co.jp/@0_mall/e-zakkamania/cabinet/22006/32417-2200682.jpg?_ex=450x450" alt="">
+                <div class="discribe">
+                  <p class="date">11/15(火) 0:00 販売開始</p>
+                  <p class="itemName">求心ジャガード ハイネック ニットプルオーバー</p>
+                  <p class="price">7,590</p>
+                </div>
+              </div>
+              <div class="itemSet">
+                <img src="https://thumbnail.image.rakuten.co.jp/@0_mall/e-zakkamania/cabinet/22006/32417-2200682.jpg?_ex=450x450" alt="">
+                <div class="discribe">
+                  <p class="date">11/15(火) 0:00 販売開始</p>
+                  <p class="itemName">求心ジャガード ハイネック ニットプルオーバー</p>
+                  <p class="price">7,590</p>
+                </div>
+              </div>
+            </div>
+            <div class="newItems">
+              <div class="itemSet">
+                <img src="https://thumbnail.image.rakuten.co.jp/@0_mall/e-zakkamania/cabinet/22006/32417-2200682.jpg?_ex=450x450" alt="">
+                <div class="discribe">
+                  <p class="date">11/15(火) 0:00 販売開始</p>
+                  <p class="itemName">求心ジャガード ハイネック ニットプルオーバー</p>
+                  <p class="price">7,590</p>
+                </div>
+              </div>
+              <div class="itemSet">
+                <img src="https://thumbnail.image.rakuten.co.jp/@0_mall/e-zakkamania/cabinet/22006/32417-2200682.jpg?_ex=450x450" alt="">
+                <div class="discribe">
+                  <p class="date">11/15(火) 0:00 販売開始</p>
+                  <p class="itemName">求心ジャガード ハイネック ニットプルオーバー</p>
+                  <p class="price">7,590</p>
+                </div>
+              </div>
+            </div>
+            <div class="more">
+              <a href="">\ 新作アイテムをもっと見る /</a>
+            </div>
+          </div>
         </div>
       </div>
     </section>
