feet: 実店舗コンテンツを追加した
Message body
・ハンバーガーメニュー内のレイアウトを調整する予定

Message footer

--- a/html/main.html
+++ b/html/main.html
@@ -230,6 +230,44 @@
         </div>
       </div>
     </section>
+
+    <section class="shops">
+      <div class="title">
+        <p>実店舗</p>
+        <p>shop</p>
+        <p class="border"></p>
+      </div>
+      <div class="shop">
+        <img src="https://e-zakkamania.com/theme/images/shop/shop-okamoto_1200.jpg" alt="">
+        <div class="describe">
+          <p class="name">zootie×fablica 神戸岡本店</p>
+          <p class="address">兵庫県神戸市東灘区</p>
+          <p class="tell">078-441-8877</p>
+          <p class="time">営業時間 : 11:00-19:00</p>
+        </div>
+      </div>
+      <div class="shop">
+        <img src="https://e-zakkamania.com/theme/images/shop/shop-stylinglab_1200.jpg" alt="">
+        <div class="describe">
+          <p class="name">stylingLAB by e-zakkamania</p>
+          <p class="address">東京都渋谷区</p>
+          <p class="tell">03-6434-9847</p>
+          <p class="time">営業時間 : 11:00-18:00</p>
+        </div>
+      </div>
+      <div class="shop">
+        <img src="https://e-zakkamania.com/theme/images/shop/shop-akita_1200.jpg" alt="">
+        <div class="describe">
+          <p class="name">イーザッカマニアストアーズ秋田ALS店</p>
+          <p class="address">秋田県秋田市</p>
+          <p class="tell">018-827-3622</p>
+          <p class="time">営業時間 : 11:00-20:00</p>
+        </div>
+      </div>
+      <div class="sponsor">
+        <img src="https://ezakkamania.itembox.design/item/visselkobe-350x60.png?t=20221111123711" alt="">
+      </div>
+    </section>
   </main>
 </body>
 
