fix: 細かなレイアウトの調整を行った
Message body
・完成に向けて細かい調整を行っていく予定

Message footer

--- a/html/myPage.html
+++ b/html/myPage.html
@@ -35,9 +35,7 @@
             <li>
               <div class="accordionMenu">
                 <div class="accordion_title">
-                <div  class="title title1">
                   <p>カテゴリから探す</p>
-                </div>
                 </div>
                 <div class="accordion_inner">
                   <a href="#">トップス</a>
@@ -51,9 +49,7 @@
             <li>
               <div class="accordionMenu">
                 <div class="accordion_title">
-                <div  class="title title1">
                   <p>ブランドから探す</p>
-                </div>
                 </div>
                 <div class="accordion_inner">
                   <a href="#">オリジナルブランド</a>
@@ -131,14 +127,14 @@
     <div class="title">
       <p>お得なイベント</p>
       <p>events</p>
-      <p></p>
+      <p class="border"></p>
     </div>
     <div class="eventItems">
       <div><a href=""><img src="https://e-zakkamania.com/theme/images/event/22/1040_c221111_1.jpg?_ex=450x450" alt=""></a></div>
-      <div><a href=""><img src="https://e-zakkamania.com/theme/images/event/22/1040_221111.jpg?_ex=450x450" alt=""></a></div>
       <div><a href=""><img src="https://image.rakuten.co.jp/e-zakkamania/cabinet/bn1040/1040_bottom_shipfree.jpg?_ex=450x450" alt=""></a></div>
-      <div><a href=""><img src="https://e-zakkamania.com/theme/images/contents/stylingLab-1040x1040.jpg" alt=""></a></div>
-      <div><a href=""><img src="https://e-zakkamania.com/theme/images/contents/fukumania-1040x1040.jpg" alt=""></a></div>
+      <div><a href=""><img src="https://e-zakkamania.com/theme/images/event/22/1040_221111.jpg?_ex=450x450" alt=""></a></div>
+      <div><a href=""><img src="https://e-zakkamania.com/theme/images/feature/1040_lowtops.jpg?_ex=450x450" alt=""></a></div>
+      <div><a href=""><img src="https://e-zakkamania.com/theme/images/event/1040_membersprice.jpg?_ex=450x450" alt=""></a></div>
     </div>
   </div>
   <div class="myPage_mainItem">
