--- a/html/myPage.html
+++ b/html/myPage.html
@@ -57,6 +57,23 @@
                 </div>
               </div>
             </li>
+            <section class="news">
+              <div class="title">
+                <p>お知らせ</p>
+                <p>news</p>
+                <p class="border"></p>
+              </div>
+              <div class="information">
+                <div class="infoItem">
+                  <span class="date">2022.11.4</span><br>
+                  <span class="text">発送についてのご案内</span>
+                </div>
+                <div class="infoItem">
+                  <span class="date">2022.9.26</span><br>
+                  <span class="text">原材料高騰による一部商品価格改定のお知らせ</span>
+                </div>
+              </div>
+            </section>
             <script src="../js/accordion.js"></script>
           </div>
         </ul>
