fix: 完成に向けた細かなレイアウトの調整を行った
Message body
・完成に向けて細かい調整を行っていく予定

Message footer

--- a/html/contents.html
+++ b/html/contents.html
@@ -57,6 +57,20 @@
                 </div>
               </div>
             </li>
+            <section class="styleSearch">
+              <div class="searchItem">
+                <div class="icon"><a href=""><i class="bi bi-person-badge"></i></a></div>
+                <div class="name">スタッフ<br>コーディネート</div>
+              </div>
+              <div class="searchItem">
+                <div class="icon"><a href=""><i class="bi bi-camera2"></i></a></div>
+                <div class="name">スタイルブック</div>
+              </div>
+              <div class="searchItem">
+                <div class="icon"><a href=""><i class="bi bi-journals"></i></a></div>
+                <div class="name">洋服と着こなしの<br>教科書</div>
+              </div>
+            </section>
             <section class="news">
               <div class="title">
                 <p>お知らせ</p>
