fix: 完成に向けた細かなレイアウトの調整を行った
Message body
・完成に向けて細かい調整を行っていく予定

Message footer

--- a/html/main.html
+++ b/html/main.html
@@ -87,6 +87,9 @@
                 </div>
               </div>
             </section>
+            <section class="worry">
+              <img src="https://e-zakkamania.com/theme/images/stylinglab/1040_stylinglab_onayami.jpg" alt="">
+            </section>
             <script src="../js/accordion.js"></script>
           </div>
         </ul>
