--- a/html/main.html
+++ b/html/main.html
@@ -87,9 +87,9 @@
                 </div>
               </div>
             </section>
-            <section class="worry">
+            <!-- <section class="worry">
               <img src="https://e-zakkamania.com/theme/images/stylinglab/1040_stylinglab_onayami.jpg" alt="">
-            </section>
+            </section> -->
             <script src="../js/accordion.js"></script>
           </div>
         </ul>
