fix: 完成に向けた細かなレイアウトの調整を行った
Message body
・完成に向けて細かい調整を行っていく予定

Message footer

--- a/html/myPage.html
+++ b/html/myPage.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../css/main.css">
   <link rel="stylesheet" href="../css/myPage.css">
   <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-  <title>Document</title>
+  <title>提出課題_清貴匡</title>
 </head>
 
 <header>
