--- a/html/contents.html
+++ b/html/contents.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../css/main.css">
   <link rel="stylesheet" href="../css/myPage.css">
   <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-  <title>Document</title>
+  <title>提出課題_清貴匡</title>
 </head>
 
 <header>
