--- a/html/contents.html
+++ b/html/contents.html
@@ -7,7 +7,7 @@
   <script src="https://kit.fontawesome.com/051eb814e7.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="../css/main.css">
-  <link rel="stylesheet" href="../css/myPage.css">
+  <link rel="stylesheet" href="../css/contents.css">
   <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
   <title>提出課題_清貴匡</title>
 </head>
@@ -116,6 +116,11 @@
   </div>
   <script src="../js/hamburger.js"></script>
 </header>
+
+<body>
+  <main>
+  </main>
+</body>
 
 <footer>
   <p class="corpInfo">
