--- a/html/main.html
+++ b/html/main.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="../css/main.css">
   <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <title>提出課題_清貴匡</title>
 </head>
 
@@ -121,7 +122,7 @@
 
 <body>
   <main>
-    <section class="slideShow">
+    <section data-aos="fade-up" data-aos-duration="1000" class="slideShow">
       <div class="wrapper">
         <span id="prev" class="prev"><i class="bi bi-chevron-left"></i></span>
         <span id="next" class="next"><i class="bi bi-chevron-right"></i></span>
@@ -150,7 +151,7 @@
       <script src="../js/slides.js"></script>
     </section>
 
-    <section class="search">
+    <section data-aos="fade-up" data-aos-duration="1000" class="search">
       <div class="search_header">
         <ul>
           <li><a href="#newItem">新作<span class="hidden">アイテム</span></a></li>
@@ -174,7 +175,7 @@
     <p class="stylingMore">
       <a href="">\ コーディネートをもっと見る /</a>
     </p>
-    <section class="styling">
+    <section data-aos="fade-up" data-aos-duration="2000" class="styling">
       <div class="scene">
         <div id="plant" class="item"></div>
         <div id="mirror">
@@ -190,7 +191,7 @@
       <script src="../js/styling.js"></script>
     </section>
 
-    <section>
+    <section data-aos="fade-up" data-aos-duration="2000">
       <div class="contents">
         <div id="ranking" class="contentsItem ranking">
           <div class="title">
@@ -250,7 +251,7 @@
       </div>
     </section>
 
-    <section class="shops">
+    <section data-aos="fade-up" data-aos-duration="2000" class="shops">
       <div class="title">
         <p>実店舗</p>
         <p>shop</p>
@@ -288,6 +289,10 @@
       </div>
     </section>
   </main>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 <footer>
