--- a/html/myPage.html
+++ b/html/myPage.html
@@ -155,17 +155,19 @@
     </div>
   </div>
   <div class="contents events">
-    <div class="title">
-      <p>お得なイベント</p>
-      <p>events</p>
-      <p class="border"></p>
-    </div>
-    <div class="eventItems">
-      <div><a href=""><img src="https://e-zakkamania.com/theme/images/event/22/1040_c221111_1.jpg?_ex=450x450" alt=""></a></div>
-      <div><a href=""><img src="https://image.rakuten.co.jp/e-zakkamania/cabinet/bn1040/1040_bottom_shipfree.jpg?_ex=450x450" alt=""></a></div>
-      <div><a href=""><img src="https://e-zakkamania.com/theme/images/event/22/1040_221111.jpg?_ex=450x450" alt=""></a></div>
-      <div><a href=""><img src="https://e-zakkamania.com/theme/images/feature/1040_lowtops.jpg?_ex=450x450" alt=""></a></div>
-      <div><a href=""><img src="https://e-zakkamania.com/theme/images/event/1040_membersprice.jpg?_ex=450x450" alt=""></a></div>
+    <div class="rotate">
+      <div class="title">
+        <p>お得なイベント</p>
+        <p>events</p>
+        <p class="border"></p>
+      </div>
+      <div class="eventItems">
+        <div><a href=""><img src="https://e-zakkamania.com/theme/images/event/22/1040_c221111_1.jpg?_ex=450x450" alt=""></a></div>
+        <div><a href=""><img src="https://image.rakuten.co.jp/e-zakkamania/cabinet/bn1040/1040_bottom_shipfree.jpg?_ex=450x450" alt=""></a></div>
+        <div><a href=""><img src="https://e-zakkamania.com/theme/images/event/22/1040_221111.jpg?_ex=450x450" alt=""></a></div>
+        <div><a href=""><img src="https://e-zakkamania.com/theme/images/feature/1040_lowtops.jpg?_ex=450x450" alt=""></a></div>
+        <div><a href=""><img src="https://e-zakkamania.com/theme/images/event/1040_membersprice.jpg?_ex=450x450" alt=""></a></div>
+      </div>
     </div>
   </div>
   <div class="myPage_mainItem">
