--- a/html/main.html
+++ b/html/main.html
@@ -151,7 +151,7 @@
       <script src="../js/slides.js"></script>
     </section>
 
-    <section data-aos="fade-up" data-aos-duration="1000" class="search">
+    <section class="search">
       <div class="search_header">
         <ul>
           <li><a href="#newItem">新作<span class="hidden">アイテム</span></a></li>
@@ -172,7 +172,7 @@
       </div>
     </section>
 
-    <p class="stylingMore">
+    <p data-aos="fade-up" data-aos-duration="1000" class="stylingMore">
       <a href="">\ コーディネートをもっと見る /</a>
     </p>
     <section data-aos="fade-up" data-aos-duration="2000" class="styling">
@@ -191,16 +191,16 @@
       <script src="../js/styling.js"></script>
     </section>
 
-    <section data-aos="fade-up" data-aos-duration="2000">
+    <section>
       <div class="contents">
-        <div id="ranking" class="contentsItem ranking">
+        <div data-aos="fade-up" data-aos-duration="2000" id="ranking" class="contentsItem ranking">
           <div class="title">
             <p>人気ランキング</p>
             <p>ranking</p>
             <p class="border"></p>
           </div>
         </div>
-        <div id="newItem" class="contentsItem newItem">
+        <div data-aos="fade-up" data-aos-duration="2000" id="newItem" class="contentsItem newItem">
           <div class="title">
             <p>新作アイテム</p>
             <p>new arrival</p>
@@ -243,7 +243,7 @@
                 </div>
               </div>
             </div>
-            <div class="more">
+            <div data-aos="fade-up" data-aos-duration="1000" class="more">
               <a href="">\ 新作アイテムをもっと見る /</a>
             </div>
           </div>
